# darkhorse-genesis

./: .gitignore  Cargo.toml  README.md  convert_hf_to_gguf.py  convert_to_gguf.py  convert_to_hf.py  requirements.txt  vllm_custom_inference.py  vllm_serve_weapper.py
data/: train.jsonl
docs/: darkhorse_genesis_release_paper.md  darkhorse_genesis_training.md
dump/: main_train.rs
parameters/: 1b-local.json  1b.json  3b.json  5b.json
paramters/: 1b.json  3b.json  5b.json
src/: attention.rs  config.rs  export_to_safetensor.rs  inference.rs  main.rs  model.rs  moe.rs  mtp.rs  train.rs
